[tool.poetry]
name = "finasync"
version = "0.1.4"
description = "A simple tool to sync your Finary portfolio values with sources platforms not yet officially integrated."
authors = ["Nicolas Mathey <nicolas@mathey.fr>"]
readme = "README.md"
packages = [{include = "finasync"}]

[tool.poetry.dependencies]
python = "^3.9.9"
docopt = "^0.6.2"
requests = "^2.30.0"
finary-uapi = { git = "https://github.com/lasconic/finary_uapi.git", branch= "switch_httpx" }
pydantic-settings = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
